# pomodoro-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: pomodoro.rc
src/: input_utils.c  input_utils.h  log_session.c  log_session.h  main.c  timer.c  timer.h
